# Emby-Collection-Creator

./: .gitignore  README.md  mcp-config.example.json  pyproject.toml
.github/workflows/: scorecard.yml
src/emby_collection_creator/: __init__.py  config.py
src/emby_collection_creator/mcp/: __init__.py  server.py
src/emby_collection_creator/models/: __init__.py  emby.py  tastedive.py  tmdb.py  trakt.py
src/emby_collection_creator/services/: __init__.py  comfyui.py  emby.py  tastedive.py  tmdb.py  trakt.py
tests/: __init__.py  test_models.py
